--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.170",
+    "@types/markdown-it": "^12.0.2",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "highlight.js": "^11.0.1",
     "lodash": "^4.17.21",
+    "markdown-it": "^12.0.6",
+    "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
